app/assets/stylesheets/projects.scss
#project-show {
  @include media-breakpoint-up(md) {
    padding-top: 6rem;
  }

  .full-description {
    padding-left: .08rem;
  }

  .project-title {
    padding-top: .4rem;
  }

  .total-score {
    @include media-breakpoint-up(md) {
      line-height: 8rem;
      font-size: 8rem;
    }
    line-height: 4rem;
    font-size: 4rem;
    font-weight: bold;
    color: $orange;
  }

  .table-of-contents li {
    font-weight: 400;
  }

  hr {
    margin-bottom: 3rem;
  }

  .lightbox-wrapper .meta {
    display: none;
  }

  #detailed-rating {
    hr {
      display: none;
    }

    h3 {
      margin-top: 2.5rem;
      font-size: $h4-font-size;
    }

    h2 {
      margin-top: 4rem;
      font-size: $h3-font-size;
    }

    h1 {
      margin-top: 4rem;
      font-size: $h2-font-size;

      img.emoji {
        width: .8em;
        height: .8em;
        margin-bottom: .2em;
      }
    }
  }
}

.rating-known {
  white-space: nowrap;
}

.rating-known .fa-star {
  color: $orange;
}

.rating-known .fa-star-o {
  color: #dedede;
}

img.emoji {
  width: 20px;
  height: 20px;
  vertical-align: middle;
}

#landing .toplist a {
  color: white;
}

.edit-link-holder {
  a {
    color: $text-muted;
  }

  a:hover {
    color: $link-hover-color;
    text-decoration: none;
  }
}

#projects-index {
  table > .hidden {
    display: none;
  }
}

